--- a/content/data/config.json
+++ b/content/data/config.json
@@ -10,7 +10,7 @@
         "primaryLinks": [
             {
                 "type": "Link",
-                "label": "Learn more",
+                "label": "All links",
                 "altText": "",
                 "url": "/https://linktr.ee/rohanmarar5",
                 "showIcon": false,
