config.json: updated url in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -63,7 +63,7 @@
             {
                 "type": "Link",
                 "label": "Contact",
-                "url": "mailto:thisismyemail.@myemail.me",
+                "url": "rohanmarar5manza@gmail.com",
                 "altText": ""
             },
             {
