--- a/content/data/config.json
+++ b/content/data/config.json
@@ -10,8 +10,13 @@
         "primaryLinks": [
             {
                 "type": "Link",
-                "label": "Info",
-                "url": "/info"
+                "label": "All links",
+                "altText": "",
+                "url": "/https://linktr.ee/rohanmarar5",
+                "showIcon": false,
+                "icon": "arrowRight",
+                "iconPosition": "right",
+                "elementId": ""
             },
             {
                 "type": "Link",
@@ -58,7 +63,7 @@
             {
                 "type": "Link",
                 "label": "Contact",
-                "url": "mailto:thisismyemail.@myemail.me",
+                "url": "rohanmarar5manza@gmail.com",
                 "altText": ""
             },
             {
@@ -70,7 +75,7 @@
             {
                 "type": "Link",
                 "label": "GitHub",
-                "url": "https://github.com/netlify-templates",
+                "url": "https://github.com/Rohan5manza",
                 "altText": "Netlify templates"
             }
         ],
@@ -88,7 +93,12 @@
         "styles": {
             "self": {
                 "width": "narrow",
-                "padding": ["pt-16", "pb-16", "pr-4", "pl-4"]
+                "padding": [
+                    "pt-16",
+                    "pb-16",
+                    "pr-4",
+                    "pl-4"
+                ]
             }
         }
     }
