--- a/content/data/config.json
+++ b/content/data/config.json
@@ -12,7 +12,7 @@
                 "type": "Link",
                 "label": "All links",
                 "altText": "",
-                "url": "/https://linktr.ee/rohanmarar5",
+                "url": "https://linktr.ee/rohanmarar5",
                 "showIcon": false,
                 "icon": "arrowRight",
                 "iconPosition": "right",
