config.json: updated label in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -10,7 +10,7 @@
         "primaryLinks": [
             {
                 "type": "Link",
-                "label": "All links",
+                "label": "My Linktree",
                 "altText": "",
                 "url": "https://linktr.ee/rohanmarar5",
                 "showIcon": false,
